-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.7.0
-
None
-
3
-
16378
This issue was created by maloo for Nathaniel Clark <nathaniel.l.clark@intel.com>
This issue relates to the following test suite run:
https://testing.hpdd.intel.com/test_sets/81b27534-6234-11e4-8055-5254006e85c2
https://testing.hpdd.intel.com/test_sets/9037c036-5d26-11e4-ae10-5254006e85c2
The sub-test test_18e failed with the following error:
(4) MDS4 is not the expected 'completed'
Please provide additional information about the failure here.
Info required for matching: sanity-lfsck 18e