lustre/osd-ldiskfs/osd_handler.c
@@ -1356,8 +1356,15 @@ static void osd_conf_get(const struct lu_env *env,
  */
 static int osd_sync(const struct lu_env *env, struct dt_device *d)
 {
+	int rc;
+
 	CDEBUG(D_HA, "syncing OSD %s\n", LUSTRE_OSD_LDISKFS_NAME);
-        return ldiskfs_force_commit(osd_sb(osd_dt_dev(d)));
+
+	rc = ldiskfs_force_commit(osd_sb(osd_dt_dev(d)));
+
+	CDEBUG(D_HA, "synced OSD %s: rc = %d\n", LUSTRE_OSD_LDISKFS_NAME, rc);
+
+	return rc;
 }
 
 /**
