lustre/tests/sanity-lfsck.sh
@@ -54,8 +54,6 @@ setupall
 
 build_test_filter
 
-$LCTL set_param debug=+lfsck > /dev/null || true
-
 MDT_DEV="${FSNAME}-MDT0000"
 OST_DEV="${FSNAME}-OST0000"
 MDT_DEVNAME=$(mdsdevname ${SINGLEMDS//mds/})
@@ -1658,6 +1656,8 @@ test_17() {
 }
 run_test 17 "LFSCK can repair multiple references"
 
+$LCTL set_param debug=+cache > /dev/null
+
 test_18a() {
 	echo "#####"
 	echo "The target MDT-object is there, but related stripe information"
@@ -2344,6 +2344,8 @@ test_18f() {
 	fi
 }
 run_test 18f "Skip the failed OST(s) when handle orphan OST-objects"
+
+$LCTL set_param debug=-cache > /dev/null
 
 test_19a() {
 	check_mount_and_prep
@@ -4141,8 +4143,6 @@ test_31h() {
 		error "(9) Fail to remove the striped directory after LFSCK"
 }
 run_test 31h "Repair the corrupted shard's name entry"
-
-$LCTL set_param debug=-lfsck > /dev/null || true
 
 # restore MDS/OST size
 MDSSIZE=${SAVED_MDSSIZE}
